k8s/overlays/production/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: oam-loxilb
  labels:
    name: oam-loxilb
    environment: production
